# bot_of_duty

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  problems.json
app/: CMakeLists.txt  main.cpp
include/: Attendant.hpp  AttendantItem.hpp  Message.hpp  MessageMap.hpp  Service.hpp  TelegramHandler.hpp  TelegramWorker.hpp
include/local_logger/: Logger.hpp  LoggerProxy.hpp  pch.hpp
include/logger/: Logger.hpp  LoggerAsync.hpp  LoggerLevel.hpp
include/problem/: IProblem.hpp  ProblemImpl.hpp
include/spdlog/: async.h  async_logger-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter.h  spdlog-inl.h  stopwatch.h
include/spdlog/cfg/: argv.h  env.h  helpers.h
include/spdlog/details/: console_globals.h  file_helper-inl.h  fmt_helper.h  log_msg-inl.h  log_msg.h  periodic_worker-inl.h  periodic_worker.h  synchronous_factory.h  tcp_client.h  thread_pool-inl.h
include/spdlog/fmt/: bin_to_hex.h
include/spdlog/fmt/bundled/: args.h  core.h  format-inl.h  format.h  os.h  ostream.h  ranges.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  base_sink-inl.h  base_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  hourly_file_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink.h  stdout_color_sinks-inl.h  syslog_sink.h  tcp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h
src/: Attendant.cpp  CMakeLists.txt  Message.cpp  Service.cpp  TelegramHandler.cpp  TelegramWorker.cpp
src/local_logger/: Logger.cpp
src/logger/: Logger.cpp  LoggerAsync.cpp
src/problem/: ProblemImpl.cpp
